decaf_PA2/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : ForeachStmt
  29       | OCStmt ';'
  30       | GuardedStmt
  31       | VariableDef
  32       | SimpleStmt ';'
  33       | IfStmt
  34       | WhileStmt
  35       | ForStmt
  36       | ReturnStmt ';'
  37       | PrintStmt ';'
  38       | BreakStmt ';'
  39       | StmtBlock

  40  ForeachStmt : FOREACH '(' BoundVariable IN Expr ')' Stmt
  41              | FOREACH '(' BoundVariable IN Expr WHILE Expr ')' Stmt

  42  BoundVariable : Type IDENTIFIER

  43  GuardedStmt : IF '{' IfBranchG IfStmtG '}'
  44              | IF '{' '}'

  45  IfBranchG : IfBranchG IfStmtG DIVIDER
  46            |

  47  IfStmtG : Expr ':' Stmt

  48  OCStmt : SCOPY '(' IDENTIFIER ',' Expr ')'

  49  SimpleStmt : LValue '=' Expr
  50             | Call
  51             |

  52  Receiver : Expr '.'
  53           |

  54  LValue : VAR IDENTIFIER
  55         | Receiver IDENTIFIER
  56         | Expr '[' Expr ']'

  57  Call : Receiver IDENTIFIER '(' Actuals ')'

  58  BoolExpr : Expr

  59  Expr : '[' Expr FOR IDENTIFIER IN Expr ']'
  60       | '[' Expr FOR IDENTIFIER IN Expr IF BoolExpr ']'
  61       | Expr '[' Expr ':' Expr ']'
  62       | Expr '[' Expr ']' DEFAULT Expr
  63       | LValue
  64       | Call
  65       | Constant
  66       | Expr '+' Expr
  67       | Expr '-' Expr
  68       | Expr '*' Expr
  69       | Expr '/' Expr
  70       | Expr '%' Expr
  71       | Expr EQUAL Expr
  72       | Expr NOT_EQUAL Expr
  73       | Expr ARRAY_REPEAT Expr
  74       | Expr ARRAY_CONCAT Expr
  75       | Expr '<' Expr
  76       | Expr '>' Expr
  77       | Expr LESS_EQUAL Expr
  78       | Expr GREATER_EQUAL Expr
  79       | Expr AND Expr
  80       | Expr OR Expr
  81       | '(' Expr ')'
  82       | '-' Expr
  83       | '!' Expr
  84       | READ_INTEGER '(' ')'
  85       | READ_LINE '(' ')'
  86       | THIS
  87       | NEW IDENTIFIER '(' ')'
  88       | NEW Type '[' Expr ']'
  89       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  90       | '(' CLASS IDENTIFIER ')' Expr

  91  Constant : ArrayConstant
  92           | LITERAL
  93           | NULL

  94  ArrayConstant : '[' ']'
  95                | '[' ArrayInsider ']'

  96  ArrayInsider : ArrayInsider ',' Constant
  97               | Constant

  98  Actuals : ExprList
  99          |

 100  ExprList : ExprList ',' Expr
 101           | Expr

 102  WhileStmt : WHILE '(' Expr ')' Stmt

 103  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

 104  BreakStmt : BREAK

 105  IfStmt : IF '(' Expr ')' Stmt ElseClause

 106  ElseClause : ELSE Stmt
 107             |

 108  ReturnStmt : RETURN Expr
 109             | RETURN

 110  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 6
	.  error


state 2
	ClassDef : SEALED . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	CLASS  shift 7
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 10


state 7
	ClassDef : SEALED CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 11
	.  error


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 12
	.  error


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 13
	.  error


state 11
	ClassDef : SEALED CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 14


state 12
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 13
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 15


state 14
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 16
	.  error


state 15
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 23
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 16
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 28


state 17
	Type : VOID .  (7)

	.  reduce 7


state 18
	Type : BOOL .  (8)

	.  reduce 8


state 19
	Type : INT .  (6)

	.  reduce 6


state 20
	Type : STRING .  (9)

	.  reduce 9


state 21
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 29
	.  error


state 22
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Type  goto 30


state 23
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 24
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 25
	VariableDef : Variable . ';'  (4)

	';'  shift 31
	.  error


state 26
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 32
	'['  shift 33
	.  error


state 27
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 28
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 34
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 29
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 30
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 35
	'['  shift 33
	.  error


state 31
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 32
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 36
	';'  reduce 5


state 33
	Type : Type '[' . ']'  (11)

	']'  shift 37
	.  error


state 34
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 35
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 38
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 41
	VariableList  goto 42


state 37
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 43
	VariableList  goto 42


state 39
	VariableList : Variable .  (22)

	.  reduce 22


state 40
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 44
	'['  shift 33
	.  error


state 41
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 45
	.  error


state 42
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 46
	')'  reduce 19


state 43
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 47
	.  error


state 44
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 45
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 48
	.  error

	StmtBlock  goto 49


state 46
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Variable  goto 50
	Type  goto 40


state 47
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 48
	.  error

	StmtBlock  goto 51


state 48
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 52


state 49
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 50
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 51
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 52
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (51)
	Receiver : .  (53)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	NULL  shift 53
	THIS  shift 54
	WHILE  shift 55
	FOR  shift 56
	IF  shift 57
	RETURN  shift 58
	BREAK  shift 59
	NEW  shift 60
	PRINT  shift 61
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	'{'  shift 48
	'}'  shift 70
	SCOPY  shift 71
	VAR  shift 72
	FOREACH  shift 73
	IDENTIFIER  reduce 53
	';'  reduce 51

	VariableDef  goto 74
	Variable  goto 25
	Type  goto 40
	StmtBlock  goto 75
	Stmt  goto 76
	ForeachStmt  goto 77
	OCStmt  goto 78
	GuardedStmt  goto 79
	SimpleStmt  goto 80
	IfStmt  goto 81
	WhileStmt  goto 82
	ForStmt  goto 83
	ReturnStmt  goto 84
	PrintStmt  goto 85
	BreakStmt  goto 86
	Expr  goto 87
	LValue  goto 88
	Call  goto 89
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 53
	Constant : NULL .  (93)

	.  reduce 93


state 54
	Expr : THIS .  (86)

	.  reduce 86


state 55
	WhileStmt : WHILE . '(' Expr ')' Stmt  (102)

	'('  shift 93
	.  error


state 56
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (103)

	'('  shift 94
	.  error


state 57
	GuardedStmt : IF . '{' IfBranchG IfStmtG '}'  (43)
	GuardedStmt : IF . '{' '}'  (44)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (105)

	'('  shift 95
	'{'  shift 96
	.  error


state 58
	ReturnStmt : RETURN . Expr  (108)
	ReturnStmt : RETURN .  (109)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 53
	';'  reduce 109

	Expr  goto 97
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 59
	BreakStmt : BREAK .  (104)

	.  reduce 104


state 60
	Expr : NEW . IDENTIFIER '(' ')'  (87)
	Expr : NEW . Type '[' Expr ']'  (88)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	IDENTIFIER  shift 100
	.  error

	Type  goto 101


state 61
	PrintStmt : PRINT . '(' ExprList ')'  (110)

	'('  shift 102
	.  error


state 62
	Expr : READ_INTEGER . '(' ')'  (84)

	'('  shift 103
	.  error


state 63
	Expr : READ_LINE . '(' ')'  (85)

	'('  shift 104
	.  error


state 64
	Constant : LITERAL .  (92)

	.  reduce 92


state 65
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (89)

	'('  shift 105
	.  error


state 66
	Expr : '-' . Expr  (82)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 106
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 67
	Expr : '!' . Expr  (83)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 107
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 68
	Expr : '(' . Expr ')'  (81)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (90)
	Receiver : .  (53)

	CLASS  shift 108
	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 109
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 69
	Expr : '[' . Expr FOR IDENTIFIER IN Expr ']'  (59)
	Expr : '[' . Expr FOR IDENTIFIER IN Expr IF BoolExpr ']'  (60)
	ArrayConstant : '[' . ']'  (94)
	ArrayConstant : '[' . ArrayInsider ']'  (95)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	']'  shift 110
	VAR  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 111
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 112
	ArrayConstant  goto 92
	ArrayInsider  goto 113


state 70
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 71
	OCStmt : SCOPY . '(' IDENTIFIER ',' Expr ')'  (48)

	'('  shift 114
	.  error


state 72
	LValue : VAR . IDENTIFIER  (54)

	IDENTIFIER  shift 115
	.  error


state 73
	ForeachStmt : FOREACH . '(' BoundVariable IN Expr ')' Stmt  (40)
	ForeachStmt : FOREACH . '(' BoundVariable IN Expr WHILE Expr ')' Stmt  (41)

	'('  shift 116
	.  error


state 74
	Stmt : VariableDef .  (31)

	.  reduce 31


state 75
	Stmt : StmtBlock .  (39)

	.  reduce 39


state 76
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 77
	Stmt : ForeachStmt .  (28)

	.  reduce 28


state 78
	Stmt : OCStmt . ';'  (29)

	';'  shift 117
	.  error


state 79
	Stmt : GuardedStmt .  (30)

	.  reduce 30


state 80
	Stmt : SimpleStmt . ';'  (32)

	';'  shift 118
	.  error


state 81
	Stmt : IfStmt .  (33)

	.  reduce 33


state 82
	Stmt : WhileStmt .  (34)

	.  reduce 34


state 83
	Stmt : ForStmt .  (35)

	.  reduce 35


state 84
	Stmt : ReturnStmt . ';'  (36)

	';'  shift 119
	.  error


state 85
	Stmt : PrintStmt . ';'  (37)

	';'  shift 120
	.  error


state 86
	Stmt : BreakStmt . ';'  (38)

	';'  shift 121
	.  error


state 87
	Receiver : Expr . '.'  (52)
	LValue : Expr . '[' Expr ']'  (56)
	Expr : Expr . '[' Expr ':' Expr ']'  (61)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (62)
	Expr : Expr . '+' Expr  (66)
	Expr : Expr . '-' Expr  (67)
	Expr : Expr . '*' Expr  (68)
	Expr : Expr . '/' Expr  (69)
	Expr : Expr . '%' Expr  (70)
	Expr : Expr . EQUAL Expr  (71)
	Expr : Expr . NOT_EQUAL Expr  (72)
	Expr : Expr . ARRAY_REPEAT Expr  (73)
	Expr : Expr . ARRAY_CONCAT Expr  (74)
	Expr : Expr . '<' Expr  (75)
	Expr : Expr . '>' Expr  (76)
	Expr : Expr . LESS_EQUAL Expr  (77)
	Expr : Expr . GREATER_EQUAL Expr  (78)
	Expr : Expr . AND Expr  (79)
	Expr : Expr . OR Expr  (80)

	AND  shift 122
	OR  shift 123
	LESS_EQUAL  shift 124
	GREATER_EQUAL  shift 125
	EQUAL  shift 126
	NOT_EQUAL  shift 127
	'+'  shift 128
	'-'  shift 129
	'*'  shift 130
	'/'  shift 131
	'%'  shift 132
	'>'  shift 133
	'<'  shift 134
	'.'  shift 135
	'['  shift 136
	ARRAY_REPEAT  shift 137
	ARRAY_CONCAT  shift 138
	.  error


state 88
	SimpleStmt : LValue . '=' Expr  (49)
	Expr : LValue .  (63)

	'='  shift 139
	AND  reduce 63
	OR  reduce 63
	LESS_EQUAL  reduce 63
	GREATER_EQUAL  reduce 63
	EQUAL  reduce 63
	NOT_EQUAL  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	'*'  reduce 63
	'/'  reduce 63
	'%'  reduce 63
	'>'  reduce 63
	'<'  reduce 63
	'.'  reduce 63
	'['  reduce 63
	ARRAY_REPEAT  reduce 63
	ARRAY_CONCAT  reduce 63


state 89
	SimpleStmt : Call .  (50)
	Expr : Call .  (64)

	AND  reduce 64
	OR  reduce 64
	LESS_EQUAL  reduce 64
	GREATER_EQUAL  reduce 64
	EQUAL  reduce 64
	NOT_EQUAL  reduce 64
	'+'  reduce 64
	'-'  reduce 64
	'*'  reduce 64
	'/'  reduce 64
	'%'  reduce 64
	'>'  reduce 64
	'<'  reduce 64
	'.'  reduce 64
	';'  reduce 50
	')'  reduce 50
	'['  reduce 64
	ARRAY_REPEAT  reduce 64
	ARRAY_CONCAT  reduce 64


state 90
	LValue : Receiver . IDENTIFIER  (55)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (57)

	IDENTIFIER  shift 140
	.  error


state 91
	Expr : Constant .  (65)

	.  reduce 65


state 92
	Constant : ArrayConstant .  (91)

	.  reduce 91


state 93
	WhileStmt : WHILE '(' . Expr ')' Stmt  (102)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 141
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 94
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (103)
	SimpleStmt : .  (51)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 53
	';'  reduce 51

	SimpleStmt  goto 142
	Expr  goto 87
	LValue  goto 88
	Call  goto 89
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 95
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (105)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 143
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 96
	GuardedStmt : IF '{' . IfBranchG IfStmtG '}'  (43)
	GuardedStmt : IF '{' . '}'  (44)
	IfBranchG : .  (46)

	'}'  shift 144
	NULL  reduce 46
	THIS  reduce 46
	NEW  reduce 46
	READ_INTEGER  reduce 46
	READ_LINE  reduce 46
	LITERAL  reduce 46
	IDENTIFIER  reduce 46
	INSTANCEOF  reduce 46
	'-'  reduce 46
	'!'  reduce 46
	'('  reduce 46
	'['  reduce 46
	VAR  reduce 46

	IfBranchG  goto 145


state 97
	Receiver : Expr . '.'  (52)
	LValue : Expr . '[' Expr ']'  (56)
	Expr : Expr . '[' Expr ':' Expr ']'  (61)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (62)
	Expr : Expr . '+' Expr  (66)
	Expr : Expr . '-' Expr  (67)
	Expr : Expr . '*' Expr  (68)
	Expr : Expr . '/' Expr  (69)
	Expr : Expr . '%' Expr  (70)
	Expr : Expr . EQUAL Expr  (71)
	Expr : Expr . NOT_EQUAL Expr  (72)
	Expr : Expr . ARRAY_REPEAT Expr  (73)
	Expr : Expr . ARRAY_CONCAT Expr  (74)
	Expr : Expr . '<' Expr  (75)
	Expr : Expr . '>' Expr  (76)
	Expr : Expr . LESS_EQUAL Expr  (77)
	Expr : Expr . GREATER_EQUAL Expr  (78)
	Expr : Expr . AND Expr  (79)
	Expr : Expr . OR Expr  (80)
	ReturnStmt : RETURN Expr .  (108)

	AND  shift 122
	OR  shift 123
	LESS_EQUAL  shift 124
	GREATER_EQUAL  shift 125
	EQUAL  shift 126
	NOT_EQUAL  shift 127
	'+'  shift 128
	'-'  shift 129
	'*'  shift 130
	'/'  shift 131
	'%'  shift 132
	'>'  shift 133
	'<'  shift 134
	'.'  shift 135
	'['  shift 136
	ARRAY_REPEAT  shift 137
	ARRAY_CONCAT  shift 138
	';'  reduce 108


state 98
	Expr : LValue .  (63)

	.  reduce 63


state 99
	Expr : Call .  (64)

	.  reduce 64


state 100
	Expr : NEW IDENTIFIER . '(' ')'  (87)

	'('  shift 146
	.  error


state 101
	Type : Type . '[' ']'  (11)
	Expr : NEW Type . '[' Expr ']'  (88)

	'['  shift 147
	.  error


state 102
	PrintStmt : PRINT '(' . ExprList ')'  (110)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 148
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92
	ExprList  goto 149


state 103
	Expr : READ_INTEGER '(' . ')'  (84)

	')'  shift 150
	.  error


state 104
	Expr : READ_LINE '(' . ')'  (85)

	')'  shift 151
	.  error


state 105
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (89)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 152
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 106
	Receiver : Expr . '.'  (52)
	LValue : Expr . '[' Expr ']'  (56)
	Expr : Expr . '[' Expr ':' Expr ']'  (61)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (62)
	Expr : Expr . '+' Expr  (66)
	Expr : Expr . '-' Expr  (67)
	Expr : Expr . '*' Expr  (68)
	Expr : Expr . '/' Expr  (69)
	Expr : Expr . '%' Expr  (70)
	Expr : Expr . EQUAL Expr  (71)
	Expr : Expr . NOT_EQUAL Expr  (72)
	Expr : Expr . ARRAY_REPEAT Expr  (73)
	Expr : Expr . ARRAY_CONCAT Expr  (74)
	Expr : Expr . '<' Expr  (75)
	Expr : Expr . '>' Expr  (76)
	Expr : Expr . LESS_EQUAL Expr  (77)
	Expr : Expr . GREATER_EQUAL Expr  (78)
	Expr : Expr . AND Expr  (79)
	Expr : Expr . OR Expr  (80)
	Expr : '-' Expr .  (82)

	'.'  shift 135
	'['  shift 136
	WHILE  reduce 82
	FOR  reduce 82
	IF  reduce 82
	AND  reduce 82
	OR  reduce 82
	LESS_EQUAL  reduce 82
	GREATER_EQUAL  reduce 82
	EQUAL  reduce 82
	NOT_EQUAL  reduce 82
	'+'  reduce 82
	'-'  reduce 82
	'*'  reduce 82
	'/'  reduce 82
	'%'  reduce 82
	'>'  reduce 82
	'<'  reduce 82
	','  reduce 82
	';'  reduce 82
	')'  reduce 82
	']'  reduce 82
	':'  reduce 82
	ARRAY_REPEAT  reduce 82
	ARRAY_CONCAT  reduce 82


state 107
	Receiver : Expr . '.'  (52)
	LValue : Expr . '[' Expr ']'  (56)
	Expr : Expr . '[' Expr ':' Expr ']'  (61)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (62)
	Expr : Expr . '+' Expr  (66)
	Expr : Expr . '-' Expr  (67)
	Expr : Expr . '*' Expr  (68)
	Expr : Expr . '/' Expr  (69)
	Expr : Expr . '%' Expr  (70)
	Expr : Expr . EQUAL Expr  (71)
	Expr : Expr . NOT_EQUAL Expr  (72)
	Expr : Expr . ARRAY_REPEAT Expr  (73)
	Expr : Expr . ARRAY_CONCAT Expr  (74)
	Expr : Expr . '<' Expr  (75)
	Expr : Expr . '>' Expr  (76)
	Expr : Expr . LESS_EQUAL Expr  (77)
	Expr : Expr . GREATER_EQUAL Expr  (78)
	Expr : Expr . AND Expr  (79)
	Expr : Expr . OR Expr  (80)
	Expr : '!' Expr .  (83)
